--- a/reports/before_after_comparison.html
+++ b/reports/before_after_comparison.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: white;
             padding: 40px;
         }
         .container {
